# hightorque_sdk

./: README.md
livelybot_bringup/: CMakeLists.txt  package.xml
livelybot_bringup/launch/: test_feedback.launch.py  test_motor.launch.py  test_motor_run.launch.py  test_reset_zero.launch.py
livelybot_bringup/script/: joy_control.py
livelybot_description/: CMakeLists.txt  package.xml
livelybot_description/launch/: livelybot_description.launch.py
livelybot_description/robot_param/: 10dof_STM32H730_model_test_Orin_params.yaml  12dof_STM32H730_model_test_Orin_params.yaml  20dof_STM32H730_model_test_Orin_params.yaml  6dof_STM32H730_model_test_Orin_params.yaml  80dof_STM32H730_model_test_Orin_params.yaml
livelybot_msg/: CMakeLists.txt  package.xml
livelybot_msg/msg/: HighState.msg  MotorCmd.msg  Test.msg
livelybot_serial/: CMakeLists.txt  package.xml
livelybot_serial/include/: lively_serial.h  robot_node.h
livelybot_serial/include/hardware/: canboard.h  canport.h  motor.h  robot.h
livelybot_serial/src/: ik_run.cpp  lively_serial.cc  robot_node.cpp  serial_t.cpp
livelybot_serial/src/hardware/: motor.cc
livelybot_serial/test/: test_feedback.cpp  test_motor.cpp  test_motor_run.cpp  test_reset_zero.cpp
serial/: CMakeLists.txt  package.xml
