<?xml version="1.0"?>
<package format="3">
  <name>livelybot_bringup</name>
  <version>0.0.0</version>
  <description>The livelybot_bringup package</description>

  <maintainer email="hpx@todo.todo">hpx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
