cmake_minimum_required(VERSION 3.8)
project(livelybot_msg)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)

set(msg_files
  "msg/Test.msg"
  "msg/MotorCmd.msg"
  "msg/MotorState.msg"
  "msg/HighState.msg"
  "msg/IMU.msg"
  "msg/LowCmd.msg"
)

rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  DEPENDENCIES std_msgs geometry_msgs sensor_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()