<?xml version="1.0"?>
<package format="3">
  <name>livelybot_msg</name>
  <version>0.0.0</version>
  <description>The livelybot_msg package</description>
  <maintainer email="hpx@todo.todo">hpx</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
