<?xml version="1.0"?>
<package format="3">
  <name>livelybot_serial</name>
  <version>0.0.0</version>
  <description>The livelybot_serial package</description>
  <maintainer email="hpx@todo.todo">hpx</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>livelybot_msg</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
